CHANGES

------------------------------------------------------------
CVS HEAD
------------------------------------------------------------


1999-12-14 warp:
 Internal:
  * The builtin eval strategy now checks the Psh::Builtins
    namespace for a function with the name of the builtin
	after it checked %built_ins
  * Fixed the initialization so the short hostname is
    calculated from the longhost name instead of calling
	hostname -s
  * Moved almost all code from psh into Psh, Psh::Builtins
    and Psh::Util
  * Added portability infrastructure
  * Working Win32 port !!! (though it has limited features)
  * Added new eval strategy "fallback_builtin" - builtins of
    that type (currently searched in package Psh::Builtins::Fallback)
    will be executed AFTER no program of that name was found.
	This allows to simulate common commands like 'ls' and
	'env' on systems not having such binaries
  * Removed perlfunc again from the list of default strategies
    after it caused too many namespace collisions. I tried to
	fix it by adding a minimum argument number but it did not
	help either. Commands like mkdir, rmdir, chmod etc. MUST
	be accessible without escape in the default settings I
	think

 Features:
  * Changed builtin alias so that 'alias name' displays the
    alias definition for that name
  * Perl Symbol completion now supports package names and
    package name completion
  * Filename Completion respects the FIGNORE environment
    variable now
  * New Perl Hashkey completion will TAB complete the name
    of keys for Perl hashes (if they are not written in quotes)
  * The 'cd' builtin respects CDPATH now and sets OLDPWD
  * Environment variable SHELL is set to the path to psh
  * New builtin 'unalias'
  * It's now possible to do "bg commandname" (e.g. "bg emacs")
    fg has the same behaviour for consistency
  * Added 'env' builtin. On systems with an env binary installed
    it will use the binary, on other systems (namely Win32) it